# rust-repo-template

./: .cosmos_llm_report.txt  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEMPLATE_USAGE.md  clippy.toml  mkdocs.yml  project.toml  rustfmt.toml
.devcontainer/: devcontainer.json
.githooks/: README.md  pre-commit
.github/: copilot-instructions.md  copilot-setup-steps.yml  labels.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ai/: ai-guidelines.md  prompt_templates.md
docs/: AGENT_INSTRUCTIONS.md  ai-collaboration.md  ci-hooks.md  contributing.md  cosmos.md  formatting.md  getting-started.md  index.md  llm.md  project-toml.md  release.md
examples/: hello.rs
plan/: README.md  todo.toml
scripts/: ai-assist.sh  install-git-hooks.sh  parse_project_toml.py  plan_close.py  plan_create.py  validate_plan.py
src/: lib.rs  llm.rs  main.rs
templates/: default.toml
tests/: basic.rs  cli_acceptance_run.rs  cli_ai.rs  cli_generate.rs  cli_generate_auto.rs  cli_generate_embedded.rs  cli_generate_fix.rs  cli_generate_force_overwrite.rs  cli_generate_protect_git.rs  cli_generate_protect_lock.rs  cli_generate_skip_overwrite.rs  cli_generate_template_folder.rs  cli_hooks_manage.rs  cli_plan.rs  cli_plan_create.rs  cli_plan_delete.rs  cli_plan_hooks.rs  cli_plan_lifecycle.rs  cli_plan_log.rs  cli_plan_show.rs  cli_plan_update.rs  cli_project_gha_outputs.rs  cli_project_validate.rs  cli_validate.rs  llm_feature.rs  template_sync.rs
(+99 files in other folders)
