[package]
name = "rust-repo-template"
version = "0.2.0"
edition = "2021"
description = "A Rust project template designed for fast starts and AI collaboration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<your-org>/<repo>"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
walkdir = "2"
glob = "0.3"
anyhow = "1"
handlebars = "4"
serde_json = "1"
async-trait = { version = "0.1", optional = true }
include_dir = "0.7"
atty = "0.2"
tempfile = "3"

[features]
llm = ["async-trait"]

[dev-dependencies]
pretty_assertions = "1.3"
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[[bin]]
name = "cosmos"
path = "src/bin/cosmos.rs"